# securicad-model-sdk

./: MANIFEST.in  NOTICE  README.md  RELEASE.md  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
securicad/langspec/: __init__.py  lang.py  lang.schema.json  lang_types.py  reader.py  step_types.py  ttc_types.py
securicad/model/: __init__.py  association.py  attacker.py  attackstep.py  base.py  defense.py  es_serializer.py  exception.py  exceptions.py  icon.py  json_serializer.py  model.py  model.schema.json  object.py  scad_serializer.py  securilang_validator.py  serializer.py  utility.py  validator.py
securicad/model/ModelViewsPackage/: ModelViewsPackage.py  __init__.py
securicad/model/ObjectModelPackage/: ObjectModelPackage.py  __init__.py
securicad/model/meta/: attackstep.schema.json  group.schema.json  meta_validator.py  model.schema.json  object.schema.json  view.schema.json
securicad/model/visual/: container.py  exception.py  exceptions.py  group.py  layout.py  view.py  viewitem.py  viewobject.py
tests/model/: com.foreseeti.securilang-2.1.9.mar  conftest.py  defense-description.sCAD  model.sCAD  model1.json  model2.json  model3.json  model4.json  model5.json  model6.json  model7.json  org.mal-lang.vehiclelang-1.0.0.mar  simple-wrong-id.sCAD  simple-wrong-version.sCAD  simple.sCAD  test_association.py  test_attacker.py  test_container.py  test_counter.py  test_es.py  test_icon.py  test_meta.py  test_object.py  test_parameterized.py  test_scad.py  test_securilang.py  test_serializer.py  test_validator.py  test_view.py  text.sCAD
tools/scripts/: create_requirements.sh  create_venv.sh  run_model_tests.sh  run_mypy.sh  run_pylint.sh
