[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
py_version = "38"

[tool.black]
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"

[tool.pylint.messages_control]
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"
