[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
py_version = "38"

[tool.black]
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
strict = true
pretty = true

[[tool.mypy.overrides]]
module = [
  "securicad.model.ModelViewsPackage.*",
  "securicad.model.ObjectModelPackage.*"
]
ignore_errors = true

[tool.pylint.MASTER]
jobs = 0
ignore = "securicad/model/ObjectModelPackage,securicad/model/ModelViewsPackage"

[tool.pylint.messages_control]
# C0330, C0326: https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint
# C0114: missing-module-docstring
# C0115: missing-class-docstring
# C0116: missing-function-docstring
# C0301: line-too-long
# W0212: protected-access
# R0201: no-self-use
# R0902: too-many-instance-attributes
# R0903: too-few-public-methods
# R0911: too-many-return-statements
disable = "C0330, C0326, C0114, C0115, C0116, C0301, W0212, R0201, R0902, R0903, R0911"

[tool.pylint.format]
max-line-length = "88"
good-names = "fp"

[tool.pylint.similarities]
min-similarity-lines = 15

[tool.pyright]
reportImportCycles = false
reportPrivateUsage = false

[tool.pytest.ini_options]
markers = [
  "object_count",
  "vehiclelang",
  "securilang"
]
