[metadata]
name = securicad-model
version = attr: securicad.model.__version__
author = Foreseeti AB
description = A Python SDK for managing models for foreseeti's securiCAD products
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/foreseeti/securicad-model-sdk
license = The Apache Software License, Version 2.0
license_files =
  LICENSE
  NOTICE
keywords =
  securicad
  model
  threat
  modeling
classifiers =
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  License :: OSI Approved
  License :: OSI Approved :: Apache Software License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Security
  Topic :: Software Development
  Topic :: Software Development :: Libraries
  Topic :: Software Development :: Libraries :: Application Frameworks
  Topic :: Software Development :: Libraries :: Python Modules
  Typing :: Typed

[options]
zip_safe = False
python_requires = >=3.8
packages =
  securicad.model

[options.extras_require]
dev =
  black
  build
  isort
  mypy
  pylint
  twine

[options.package_data]
securicad.model = py.typed
